--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+== 1.7.1
+
+Minor change in locating config file (Ariel Salomon)
+
+
 == 1.7.0 (2011-08-27)
 
 Note: Vanity is no longer tested to work with Rails 2.3.x.  This version is
